--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
     const firstName = document.getElementById("firstName").value;
     const lastName = document.getElementById("lastName").value;
     const brandOrCreator = document.getElementById("brandOrCreator").value;
-    const phoneNumber = document.getElementById("phoneNumber").value;
+    const phoneNumber = document.getElementById("phone").value;
     const message = document.getElementById("message").value;
 
     const formData = new FormData();
