--- a/index.html
+++ b/index.html
@@ -1346,6 +1346,7 @@
     <script>
 
 <script>
+   <script>
     // JavaScript to toggle the 'scrolled' class based on page position
     window.addEventListener('scroll', () => {
         const navbar = document.querySelector('.adaptive-navbar');
@@ -1439,16 +1440,16 @@
     document.getElementById("contactForm").addEventListener("submit", function(event) {
         event.preventDefault();
         
-        const brandOrCreator = document.getElementById("brandOrCreator").value;
         const firstName = document.getElementById("firstName").value;
         const lastName = document.getElementById("lastName").value;
+        const brandOrCreator = document.getElementById("brandOrCreator").value;
         const phoneNumber = document.getElementById("phone").value;
         const message = document.getElementById("message").value;
 
         const formData = new FormData();
-        formData.append("brandOrCreator", brandOrCreator);
         formData.append("firstName", firstName);
         formData.append("lastName", lastName);
+        formData.append("brandOrCreator", brandOrCreator);  // Changed this back to the original order
         formData.append("phoneNumber", phoneNumber);
         formData.append("message", message);
 
@@ -1470,6 +1471,8 @@
             document.getElementById("responseMessage").innerHTML = "<div class='alert alert-danger'>There was an error submitting your form.</div>";
         });
     });
+</script>
+
 </script>
 
 
