--- a/index.html
+++ b/index.html
@@ -1344,80 +1344,65 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybzaLlv6wW5e1Z6DrC7fU7r9bLgGQkxxFeB9N1cDJ7jj8E6zqM" crossorigin="anonymous"></script>      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-
-<script>
-   <script>
-    // JavaScript to toggle the 'scrolled' class based on page position
+  // JavaScript to toggle the 'scrolled' class based on page position
+    document.addEventListener("DOMContentLoaded", function () {
+    // Scroll event listener for navbar
     window.addEventListener('scroll', () => {
         const navbar = document.querySelector('.adaptive-navbar');
         const scrollY = window.scrollY;
-
         if (scrollY > 50) {
-            // Add scrolled class when user scrolls down
             navbar.classList.add('scrolled');
         } else {
-            // Remove scrolled class when at the top
             navbar.classList.remove('scrolled');
         }
     });
 
-    // Fade-in effect when contact section appears on scroll
-    document.addEventListener("DOMContentLoaded", function() {
-        const contactSection = document.getElementById("contact-us");
-        window.addEventListener("scroll", function() {
-            if (window.scrollY + window.innerHeight > contactSection.offsetTop + 100) {
-                contactSection.classList.add("fadeIn");
-            }
-        });
+    // Fade-in effect when scrolling to contact section
+    const contactSection = document.getElementById("contact-us");
+    window.addEventListener("scroll", function() {
+        if (window.scrollY + window.innerHeight > contactSection.offsetTop + 100) {
+            contactSection.classList.add("fadeIn");
+        }
     });
 
-    // Hover effect for story cards
+    // Story card hover
     document.querySelectorAll('.story-card').forEach(card => {
         card.addEventListener('mouseover', function () {
-            // Get the data attributes from the card
             const handle = this.getAttribute('data-handle');
             const followers = this.getAttribute('data-followers');
             const image = this.getAttribute('data-image');
 
-            // Update the profile preview area
             document.getElementById('profile-image').src = image;
             document.getElementById('profile-handle').textContent = handle;
             document.getElementById('profile-followers').textContent = `Followers: ${followers}`;
         });
     });
 
-    // IntersectionObserver for animating elements when they appear in viewport
-    document.addEventListener("DOMContentLoaded", function() {
-        const hiddenElements = document.querySelectorAll(".hidden");
-
-        const observer = new IntersectionObserver(entries => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add("visible");
-                    observer.unobserve(entry.target);
-                }
-            });
+    // IntersectionObserver for hidden elements
+    const hiddenElements = document.querySelectorAll(".hidden");
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                observer.unobserve(entry.target);
+            }
         });
-
-        hiddenElements.forEach(element => observer.observe(element));
     });
+    hiddenElements.forEach(element => observer.observe(element));
 
-    // Creator cards float animation
-    document.addEventListener("DOMContentLoaded", () => {
-        const creatorCards = document.querySelectorAll(".creator-card");
+    // IntersectionObserver for creator cards
+    const creatorCards = document.querySelectorAll(".creator-card");
+    const creatorObserver = new IntersectionObserver((entries) => {
+        entries.forEach((entry, index) => {
+            if (entry.isIntersecting) {
+                setTimeout(() => {
+                    entry.target.classList.add("float");
+                }, index * 300);
+            }
+        });
+    }, { threshold: 0.5 });
 
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach((entry, index) => {
-                if (entry.isIntersecting) {
-                    setTimeout(() => {
-                        entry.target.classList.add("float");
-                    }, index * 300);
-                }
-            });
-        }, { threshold: 0.5 });
-
-        creatorCards.forEach((card) => observer.observe(card));
-    });
+    creatorCards.forEach((card) => creatorObserver.observe(card));
 
     // Carousel functionality
     const carousel = document.querySelector('.carousel');
@@ -1432,12 +1417,8 @@
         carousel.scrollBy({ left: 200, behavior: 'smooth' });
     });
 
-    // Scroll event for fade-in trigger
-    window.addEventListener('scroll', triggerFadeIn);
-    document.addEventListener('DOMContentLoaded', triggerFadeIn);
-
-    // Contact form submission handler
-    document.getElementById("contactForm").addEventListener("submit", function(event) {
+    // Contact form submission (your code here)
+   document.getElementById("contactForm").addEventListener("submit", function(event) {
         event.preventDefault();
         
         const firstName = document.getElementById("firstName").value;
@@ -1470,11 +1451,7 @@
         .catch(error => {
             document.getElementById("responseMessage").innerHTML = "<div class='alert alert-danger'>There was an error submitting your form.</div>";
         });
-    });
-</script>
-
-</script>
-
+});
 
 </script>
         
