--- a/index.html
+++ b/index.html
@@ -1282,8 +1282,8 @@
                         <input type="text" class="form-control" id="lastName" required>
                     </div>
                     <div class="mb-3">
-                        <label for="phone" class="form-label">Phone Number</label>
-                        <input type="tel" class="form-control" id="phone" required>
+                        <label for="phoneNumber" class="form-label">Phone Number</label>
+                        <input type="tel" class="form-control" id="phoneNumber" required>
                     </div>
                     <div class="mb-3">
                         <label for="message" class="form-label">Your Message</label>
@@ -1419,7 +1419,7 @@
         carousel.scrollBy({ left: 200, behavior: 'smooth' });
     });
 
-   document.getElementById("contactForm").addEventListener("submit", function(event) {
+  document.getElementById("contactForm").addEventListener("submit", function(event) {
     event.preventDefault();
 
     const firstName = document.getElementById("firstName").value;
