--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                     <div id="carouselExample" class="carousel slide flex-grow-1 carousel-container" data-bs-ride="carousel" data-bs-interval="2000">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./assets/Join Us Brand.png" alt="Slide 1" style="height: 800px;">
+                                <img src="./Assets/Join Us Brand.png" alt="Slide 1" style="height: 800px;">
                             </div>
                             <div class="carousel-item">
                                 <img src="./Assets/Join Us Creator.png" alt="Slide 2" style="height: 800px;">
